--- a/index.html
+++ b/index.html
@@ -5,42 +5,61 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="script.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.3/xlsx.full.min.js"></script>
     <link rel="stylesheet" href="style.css">
+
     <title>Document</title>
 </head>
 <body>
 
-    <h1>Tabela para Excel</h1>
-
-    <div>
-        <input type="text" id="nome" placeholder="Insira uma descrição:">
-        <input type="number" id="valor" placeholder="Insira o valor do produto:">
-        <input type="number" id="quantidade" placeholder="Insira a quantidade:">
+    <div class="nav-links">
+        <h1>Tabela para Excel</h1>
     </div>
     <br>
-    <div>
-        <button onclick="adicionarItem()">Adicionar a tabela</button>
+    <br>
+
+    <div class="input">
+        <input type="text" id="nome" placeholder=" Insira uma descrição:">
+        <input type="number" id="valor" placeholder=" Insira o valor do produto:">
+        <input type="number" id="quantidade" placeholder=" Insira a quantidade:">
+    </div>
+    <br>
+    <div class="btn-group" role="group" aria-label="Basic example">
+        <button onclick="adicionarItem()"type="button" class="btn btn-dark transform"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-back" viewBox="0 0 16 16">
+            <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
+          </svg> Adicionar à tabela</button>
     </div>
     <br>
     <div>
         <table id="tabela">
             <thead>
                 <tr>
-                    <th>Nome</th>
-                    <th>Valor</th>
-                    <th>Quantidade</th>
+                    <th class="center">Nome</th>
+                    <th class="center">Valor</th>
+                    <th clas="center">Quantidade</th>
                 </tr>
             </thead>
-            <tbody>
+            <tbody class="bodyDaTabela">
 
             </tbody>
         </table>
     </div>
     <br>
-    <div>
-        <button onclick="exportarParaExcel()">Exportar para Excel</button>
+    <div class="btn-group" role="group" aria-label="Basic example">
+        <button onclick="exportarParaExcel()"type="button" class="btn btn-dark transform"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-back" viewBox="0 0 16 16">
+            <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
+          </svg>Exportar para Excel</button>
     </div>
+    <br>
+    <br>
+        <input type="text" id="nomeRemover" placeholder=" Insira um nome para remover:">
+        <div class="btn-group" role="group" aria-label="Basic example">
+            <button onclick="removerItem()" type="button" class="btn btn-dark transform"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-back" viewBox="0 0 16 16">
+                <path d="M0 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v2h2a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2v-2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1z"/>
+              </svg>Remover</button>
+        </div>
     
 </body>
 </html>
